--- a/src/view/css/themes/dark-theme.scss
+++ b/src/view/css/themes/dark-theme.scss
@@ -190,12 +190,6 @@
     fill: #dddddd;
   }
 
-  /* Transaction list */
-  .paginator-item,
-  a.paginator-arrow:hover {
-    border-color: #202020;
-  }
-
   /* Transaction list item */
   .trans-list_details td > div,
   table.trans-list-items td > div,
