--- a/src/view/css/themes/white-theme.scss
+++ b/src/view/css/themes/white-theme.scss
@@ -189,12 +189,6 @@
     fill: #000000;
   }
 
-  /* Transaction list */
-  .paginator-item,
-  a.paginator-arrow:hover {
-    border-color: #ffffff;
-  }
-
   /* Transaction list item */
   .trans-list_details td > div,
   table.trans-list-items td > div,
